--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Snake</title>
 </head>
-<body style="background-color: #1fcc0fd7">
+<body style="background-color: #14bc33d7">
 <div class="menu">
-  <p> Best Score:<a class="best-score">0</a></p>
+  <p> Best Score:<a class="high-score-field">0</a></p>
   <p>——— Classic Snake ———</p>
   <button id="continue-game">Continue</button>
   <button id="start-game">New game</button>
